test: RestDocs를 적용한 PostControllerTest 테스트 코드 수정
- 게시글 등록, 전체 조회, 상세 조회, 검색에 대한 RestDocs 적용