@@ -2,39 +2,43 @@ package com.hibitbackendrefactor.post.presentation;
 
 import com.hibitbackendrefactor.ControllerTestSupport;
 import com.hibitbackendrefactor.member.domain.Member;
+import com.hibitbackendrefactor.post.domain.Post;
 import com.hibitbackendrefactor.post.domain.PostStatus;
 import com.hibitbackendrefactor.post.dto.request.PostCreateRequest;
 import com.hibitbackendrefactor.post.dto.response.*;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.http.MediaType;
+import org.springframework.restdocs.mockmvc.RestDocumentationRequestBuilders;
 import org.springframework.restdocs.payload.JsonFieldType;
 
 import java.time.LocalDateTime;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import static com.hibitbackendrefactor.common.fixtures.MemberFixtures.팬시;
 import static com.hibitbackendrefactor.common.fixtures.PostFixtures.*;
 import static com.hibitbackendrefactor.post.dto.response.PostResponse.AttendanceAndTogetherActivity;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.when;
 import static org.springframework.restdocs.headers.HeaderDocumentation.headerWithName;
 import static org.springframework.restdocs.headers.HeaderDocumentation.requestHeaders;
 import static org.springframework.restdocs.mockmvc.MockMvcRestDocumentation.document;
 import static org.springframework.restdocs.operation.preprocess.Preprocessors.*;
-import static org.springframework.restdocs.payload.PayloadDocumentation.*;
+import static org.springframework.restdocs.payload.PayloadDocumentation.fieldWithPath;
+import static org.springframework.restdocs.payload.PayloadDocumentation.requestFields;
+import static org.springframework.restdocs.request.RequestDocumentation.parameterWithName;
+import static org.springframework.restdocs.request.RequestDocumentation.pathParameters;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 
 class PostControllerTest extends ControllerTestSupport {
     private static final String AUTHORIZATION_HEADER_NAME = "Authorization";
     private static final String AUTHORIZATION_HEADER_VALUE = "Bearer aaaaaaaa.bbbbbbbb.cccccccc";
-
 
     private static final PostResponse POST_RESPONSE_1 = PostResponse.builder()
             .id(1L)
@@ -82,7 +86,7 @@ class PostControllerTest extends ControllerTestSupport {
                         .contentType(MediaType.APPLICATION_JSON)
                 )
                 .andDo(print())
-                .andDo(document("post/save",
+                .andDo(document("posts/save/success",
                                 preprocessRequest(prettyPrint()),
                                 preprocessResponse(prettyPrint()),
                                 requestHeaders(
@@ -106,26 +110,21 @@ class PostControllerTest extends ControllerTestSupport {
     @Test
     void 등록된_게시글을_모두_조회한다() throws Exception {
         // given
-        List<PostResponse> responses = Collections.singletonList(PostResponse.builder()
-                .id(팬시().getId())
-                .title(게시글제목1)
-                .exhibition(전시회제목1)
-                .exhibitionAttendanceAndTogetherActivity(Collections.singletonList("4인 관람"))
-                .postStatus(모집상태1)
-                .imageName(게시글이미지1)
-                .createDateTime(LocalDateTime.now())
-                .build());
+        Member 팬시 = 팬시();
+        팬시 = memberRepository.save(팬시);
+        List<Post> 게시글_목록 = List.of(프로젝트_해시테크(팬시), 오스틴리_전시회(팬시));
+        PostsResponse response = PostsResponse.of(게시글_목록);
 
-        // when
-        when(postService.findAll()).thenReturn(new PostsResponse(responses));
+        given(postService.findAll()).willReturn(response);
 
-        // then
+        // when & then
         mockMvc.perform(get("/api/posts")
                         .header(AUTHORIZATION_HEADER_NAME, AUTHORIZATION_HEADER_VALUE)
-                        .content(objectMapper.writeValueAsString(responses))
+                        .accept(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(response))
                         .contentType(MediaType.APPLICATION_JSON))
                 .andDo(print())
-                .andDo(document("post/findAll",
+                .andDo(document("posts/find/all/success",
                         preprocessRequest(prettyPrint()),
                         preprocessResponse(prettyPrint())
                 ))
@@ -137,6 +136,8 @@ class PostControllerTest extends ControllerTestSupport {
     void 게시글에_대한_상세_페이지를_조회한다() throws Exception {
         // given
         Member 팬시 = 팬시();
+        memberRepository.save(팬시);
+
         Long postId = 1L;
         PostDetailResponse response = PostDetailResponse.builder()
                 .id(postId)
@@ -156,15 +157,18 @@ class PostControllerTest extends ControllerTestSupport {
         when(postService.findPost(any(), any(), any())).thenReturn(response);
 
         // then
-        mockMvc.perform(get("/api/posts/{id}", postId)
+        mockMvc.perform(RestDocumentationRequestBuilders.get("/api/posts/{id}", postId)
                         .header(AUTHORIZATION_HEADER_NAME, AUTHORIZATION_HEADER_VALUE)
-                        .content(objectMapper.writeValueAsString(response))
                         .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-                .andExpect(jsonPath("$.id").value(postId))
-                .andExpect(jsonPath("$.writerName").value("팬시"))
-                .andReturn();
+                .andDo(print())
+                .andDo(document("posts/find/one/success",
+                        preprocessRequest(prettyPrint()),
+                        preprocessResponse(prettyPrint()),
+                        pathParameters(
+                                parameterWithName("id").description("게시글 ID")
+                        )
+                ))
+                .andExpect(status().isOk());
     }
 
     @DisplayName("검색할 때 특정 제목 또는 내용에 해당하는 값을 입력하면 해당 값이 포함된 개수가 반환된다.")
@@ -179,8 +183,13 @@ class PostControllerTest extends ControllerTestSupport {
         // then
         mockMvc.perform(get("/api/posts/count?query=제목|내용")
                         .header(AUTHORIZATION_HEADER_NAME, AUTHORIZATION_HEADER_VALUE)
-                        .content(objectMapper.writeValueAsString(countResponse))
+                        .accept(MediaType.APPLICATION_JSON)
                         .contentType(MediaType.APPLICATION_JSON))
+                .andDo(print())
+                .andDo(document("posts/count/success",
+                        preprocessRequest(prettyPrint()),
+                        preprocessResponse(prettyPrint())
+                ))
                 .andExpect(status().isOk())
                 .andReturn();
     }
@@ -198,15 +207,13 @@ class PostControllerTest extends ControllerTestSupport {
         // then
         mockMvc.perform(get("/api/posts/search?query=제목&size=2&page=0")
                         .header(AUTHORIZATION_HEADER_NAME, AUTHORIZATION_HEADER_VALUE)
-                        .content(objectMapper.writeValueAsString(pagePostsResponse))
                         .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-                .andExpect(jsonPath("$.posts[0].id").value(2L))
-                .andExpect(jsonPath("$.posts[0].title").value("게시글 제목2"))
-                .andExpect(jsonPath("$.posts[0].exhibition").value("전시회 제목2"))
-                .andReturn();
-
+                .andDo(print())
+                .andDo(document("posts/search/success",
+                        preprocessRequest(prettyPrint()),
+                        preprocessResponse(prettyPrint())
+                ))
+                .andExpect(status().isOk());
     }
 
     @DisplayName("or 게시글 검색 시 200을 반환한다.")
@@ -222,15 +229,14 @@ class PostControllerTest extends ControllerTestSupport {
         // then
         mockMvc.perform(get("/api/posts/search?query=제목2|제목1&size=2&page=0")
                         .header(AUTHORIZATION_HEADER_NAME, AUTHORIZATION_HEADER_VALUE)
-                        .content(objectMapper.writeValueAsString(pagePostsResponse))
+                        .accept(MediaType.APPLICATION_JSON)
                         .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-                .andExpect(jsonPath("$.posts[0].id").value(2L))
-                .andExpect(jsonPath("$.posts[0].title").value("게시글 제목2"))
-                .andExpect(jsonPath("$.posts[0].exhibition").value("전시회 제목2"))
-                .andReturn();
-
+                .andDo(print())
+                .andDo(document("posts/search/success/or",
+                        preprocessRequest(prettyPrint()),
+                        preprocessResponse(prettyPrint())
+                ))
+                .andExpect(status().isOk());
     }
 
     @DisplayName("and 게시글 검색 시 200을 반환한다.")
@@ -246,13 +252,13 @@ class PostControllerTest extends ControllerTestSupport {
         // then
         mockMvc.perform(get("/api/posts/search?query=제목2&제목1&size=2&page=0")
                         .header(AUTHORIZATION_HEADER_NAME, AUTHORIZATION_HEADER_VALUE)
-                        .content(objectMapper.writeValueAsString(pagePostsResponse))
+                        .accept(MediaType.APPLICATION_JSON)
                         .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-                .andExpect(jsonPath("$.posts[0].id").value(2L))
-                .andExpect(jsonPath("$.posts[0].title").value("게시글 제목2"))
-                .andExpect(jsonPath("$.posts[0].exhibition").value("전시회 제목2"))
-                .andReturn();
+                .andDo(print())
+                .andDo(document("posts/search/success/and",
+                        preprocessRequest(prettyPrint()),
+                        preprocessResponse(prettyPrint())
+                ))
+                .andExpect(status().isOk());
     }
 }
